--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <main>
-      <img src="/Users/ayua/Downloads/recipe-page-main/assets/images/image-omelette.jpeg" alt="omelette dish"/>
+      <img src="image-omelette.jpeg" alt="omelette dish"/>
 
       <h1>Simple Omelette Recipe</h1>
 
